2006-09-02 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp: Doc-comment fixes.

2006-08-31 Braden McDaniel  <braden@endoframe.com>

	* examples/sdl_viewer.cpp (main(int, char **)): Allocate a console
	and direct stdout and stderr to it on Windows.

2006-08-31 Braden McDaniel  <braden@endoframe.com>

	Updated test programs to use make_* functions to create
	fundamental types.

	* tests/color.cpp
	(stream_extraction_without_commas()): Use openvrml::make_color
	instead of openvrml::color constructor.
	(stream_extraction_with_commas()): Use openvrml::make_color
	instead of openvrml::color constructor.

	* tests/mat4f.cpp
	(stream_insertion()): Use openvrml::make_mat4f instead of
	openvrml::mat4f constructor.
	(stream_extraction_numbers_only()): Use openvrml::make_mat4f
	instead of openvrml::mat4f constructor.
	(stream_extraction_numbers_with_commas()): Use
	openvrml::make_mat4f instead of openvrml::mat4f constructor.

2006-08-31 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(trackball(float, float, float, float): Added missing "using
	openvrml::make_vec3f".
	(computeExtrusion_(const std::vector<openvrml::rotation> &, const
	std::vector<openvrml::vec2f> &, const
	std::vector<openvrml::vec2f>&, const
	std::vector<openvrml::vec3f>&, std::vector<openvrml::vec3f> &,
	std::vector<openvrml::vec2f> &)): Added missing "using
	openvrml::make_vec3f".

2006-08-31 Braden McDaniel  <braden@endoframe.com>

	Made openvrml::color, openvrml::color_rgba, openvrml::vec2f,
	openvrml::vec2d, openvrml::vec3f, openvrml::vec3d,
	openvrml::rotation, openvrml::mat4f, and openvrml::quatf
	POD-structs.  This allows safe usage of these types in C APIs.

	* src/libopenvrml/openvrml/Vrml97Parser.g (rotationValue): Use
	construction functions instead of constructors.
	* src/libopenvrml/openvrml/basetypes.cpp
	(openvrml::color::color()): Removed constructor; use
	openvrml::make_color() instead.